--- a/index.html
+++ b/index.html
@@ -3,16 +3,64 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=Edge'>
-  <link rel='stylesheet' href='./css/font-awesome/css/font-awesome.min.css'>
   <title>geojson.net</title>
+  <link href='./node_modules/tachyons/src/tachyons.css' rel='stylesheet' />
   <link href='./node_modules/leaflet/dist/leaflet.css' rel='stylesheet' />
   <link href='./node_modules/leaflet-draw/dist/leaflet.draw.css' rel='stylesheet' />
   <link href='./node_modules/codemirror/lib/codemirror.css' rel='stylesheet' />
-  <link href='./css/base.css' rel='stylesheet' />
-  <link href='./css/marker.css' rel='stylesheet' />
-  <link href='./css/github_browse.css' rel='stylesheet' />
-  <link href='./css/site.css' rel='stylesheet' />
-  <link href='./css/theme.css' rel='stylesheet' />
+  <link href='./node_modules/codemirror/theme/neat.css' rel='stylesheet' />
+  <link href='./node_modules/react-table/react-table.css' rel='stylesheet' />
+  <style>
+
+.disappear-child .child {
+  display: none;
+}
+.disappear-child:hover  .child,
+.disappear-child:focus  .child,
+.disappear-child:active .child {
+  display: block;
+}
+  .CodeMirror {
+    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
+    font-size: 14px;
+    line-height: 20px;
+    height: auto;
+    flex: 1 1 auto;
+  }
+
+  .error-marker {
+    width:10px;
+    height:1.5em;
+    background:#EAB;
+    transition:all 100ms;
+    -webkit-transition:all 100ms;
+}
+
+.error-marker:hover {
+    background:#D68;
+}
+
+.error-marker:before {
+    opacity:0;
+    pointer-events:none;
+    content:attr(message);
+    transition:all 100ms;
+    -webkit-transition:all 100ms;
+    content:attr(message);
+    width:300px;
+    font-size:10px;
+    padding:5px;
+    border:1px solid #000;
+    position:absolute;
+    background:#fff;
+    z-index:999;
+}
+
+.error-marker:hover:before {
+    opacity:1;
+    margin-left:35px;
+}
+  </style>
   <link rel='icon' type='image/x-icon' href='./img/favicon.png' />
   <meta name='description' content='simply edit geojson map data' />
   <meta property='og:site_name' content='geojson.net'/>
@@ -59,7 +107,7 @@
 </head>
 <body id='geojsonio-body'>
 
-<div class='geojsonio'></div>
+<div id='geojsonio'></div>
 
 <script>
 if (self == top) {
