Persnickety font tweaks

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link href='./node_modules/codemirror/theme/neat.css' rel='stylesheet' />
   <link href='./node_modules/react-table/react-table.css' rel='stylesheet' />
   <style>
+.sans-serif, button {
+  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial, sans-serif;
+}
 
 .disappear-child .child {
   display: none;
