Initial commit of ant design based layout

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=Edge'>
   <title>geojson.net</title>
-  <link href='./node_modules/tachyons/src/tachyons.css' rel='stylesheet' />
-  <link href='./node_modules/leaflet/dist/leaflet.css' rel='stylesheet' />
-  <link href='./node_modules/leaflet-draw/dist/leaflet.draw.css' rel='stylesheet' />
+
   <link href='./node_modules/codemirror/lib/codemirror.css' rel='stylesheet' />
   <link href='./node_modules/codemirror/theme/neat.css' rel='stylesheet' />
   <link href='./node_modules/react-table/react-table.css' rel='stylesheet' />
@@ -90,6 +88,8 @@ dialog::backdrop {
       ;
     font-src
       'self'
+      data:
+       *.alicdn.com
       ;
     frame-src
       'self'
