--- a/index.html
+++ b/index.html
@@ -7,69 +7,8 @@
   <link href='./node_modules/tachyons/src/tachyons.css' rel='stylesheet' />
   <link href='./node_modules/leaflet/dist/leaflet.css' rel='stylesheet' />
   <link href='./node_modules/codemirror/lib/codemirror.css' rel='stylesheet' />
-  <link href='./node_modules/codemirror/theme/neat.css' rel='stylesheet' />
-  <style>
-.sans-serif, button {
-  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial, sans-serif;
-}
-
-.disappear-child .child {
-  display: none;
-}
-.disappear-child:hover  .child,
-.disappear-child:focus  .child,
-.disappear-child:active .child {
-  display: block;
-}
-  .CodeMirror {
-    font-family: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
-    font-size: 14px;
-    line-height: 20px;
-    height: auto;
-    flex: 1 1 auto;
-  }
-
-  .error-marker {
-    width:10px;
-    height:1.5em;
-    background:#EAB;
-    transition:all 100ms;
-    -webkit-transition:all 100ms;
-}
-
-.error-marker:hover {
-    background:#D68;
-}
-
-.error-marker:before {
-    opacity:0;
-    pointer-events:none;
-    content:attr(message);
-    transition:all 100ms;
-    -webkit-transition:all 100ms;
-    content:attr(message);
-    width:300px;
-    font-size:10px;
-    padding:5px;
-    border:1px solid #000;
-    position:absolute;
-    background:#fff;
-    z-index:999;
-}
-
-.error-marker:hover:before {
-    opacity:1;
-    margin-left:35px;
-}
-
-dialog {
-  z-index: 999;
-}
-dialog::backdrop {
-  background: rgba(0,0,0,0.9);
-  z-index: 998;
-}
-  </style>
+  <link href='./css/theme.css' rel='stylesheet' />
+  <link href='./css/style.css' rel='stylesheet' />
   <link rel='icon' type='image/x-icon' href='./img/favicon.png' />
   <meta name='description' content='simply edit geojson map data' />
   <meta property='og:site_name' content='geojson.net'/>
@@ -114,9 +53,9 @@ dialog::backdrop {
   body { display: none; }
   </style>
 </head>
-<body id='geojsonio-body'>
+<body>
 
-<div id='geojsonio'></div>
+<div id='geojsonnet'></div>
 
 <script>
 if (self == top) {
