--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=Edge'>
   <title>geojson.net</title>
   <link href='./node_modules/tachyons/src/tachyons.css' rel='stylesheet' />
-  <link href='./node_modules/leaflet/dist/leaflet.css' rel='stylesheet' />
+  <link href='./css/leaflet.css' rel='stylesheet' />
   <link href='./node_modules/codemirror/lib/codemirror.css' rel='stylesheet' />
   <link href='./css/theme.css' rel='stylesheet' />
   <link href='./css/style.css' rel='stylesheet' />
