Redirect to Placemark

--- a/index.html
+++ b/index.html
@@ -2,68 +2,9 @@
 <html>
 <head>
   <meta charset='utf-8'>
-  <meta http-equiv='X-UA-Compatible' content='IE=Edge'>
-  <title>geojson.net</title>
-  <link href='./node_modules/tachyons/src/tachyons.css' rel='stylesheet' />
-  <link href='./css/leaflet.css' rel='stylesheet' />
-  <link href='./node_modules/codemirror/lib/codemirror.css' rel='stylesheet' />
-  <link href='./css/theme.css' rel='stylesheet' />
-  <link href='./css/style.css' rel='stylesheet' />
-  <link rel='icon' type='image/x-icon' href='./img/favicon.png' />
-  <meta name='description' content='simply edit geojson map data' />
-  <meta property='og:site_name' content='geojson.net'/>
-  <meta name='viewport' content='initial-scale=1,maximum-scale=1'>
-  <meta http-equiv="Content-Security-Policy" content="
-    default-src
-      'self'
-      ;
-    child-src
-      'self'
-      blob:
-      ;
-    connect-src
-      'self'
-      *
-      ;
-    font-src
-      'self'
-      ;
-    frame-src
-      'self'
-      ;
-    img-src
-      'self'
-      data:
-      *
-      ;
-    script-src
-      'self'
-      'unsafe-eval'
-      'unsafe-inline'
-      ;
-    style-src
-      'self'
-      'unsafe-inline'
-      ;
-  ">
-  <style>
-  /*
-   * http://seclab.stanford.edu/websec/framebusting/framebust.pdf
-   */
-  body { display: none; }
-  </style>
+  <meta http-equiv="refresh" content="0;URL='https://placemark.io/'" />  
 </head>
 <body>
-
-<div id='geojsonnet'></div>
-
-<script>
-if (self == top) {
-  document.getElementsByTagName ("body")[0].style.display = 'block';
-} else {
-  top.location = self.location;
-}
-</script>
-<script src='./src/index.js'></script>
+  Redirecting…
 </body>
 </html>
